fixed box-sizing,overflow,height -#root element

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -10,6 +11,9 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
-
+#root {
+  height: 100%;
+}
